--- a/style.css
+++ b/style.css
@@ -328,3 +328,80 @@ nav .search-wrapper .button-search {
   color: #848fac;
   margin-top: 8px;
 }
+
+#feature-section {
+  background-color: var(--neutral);
+}
+
+#feature-section .content {
+  max-width: 1440px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  padding: 100px 80px;
+  gap: 64px;
+}
+
+#feature-section .content .label {
+  margin: 0 auto;
+}
+
+#feature-section .content .title {
+  text-align: center;
+  margin: 16px 0;
+  font-size: 48px;
+  line-height: 56px;
+  letter-spacing: -2%;
+  font-weight: 700;
+  color: var(--blue);
+}
+
+#feature-section .content .subtitle {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: -1%;
+  text-align: center;
+  color: #848fac;
+}
+
+#feature-section .content .feature-list-wrapper {
+  display: grid;
+  grid-column: 3;
+  grid-template-columns: auto auto auto;
+  gap: 84px;
+}
+
+#feature-section .content .feature-card {
+  max-width: 371px;
+}
+
+#feature-section .content .feature-card .feature-image {
+  width: 100%;
+  height: 371px;
+  border-radius: 24px 24px 0px 0px;
+  background-color: var(--dark);
+}
+
+#feature-section .content .feature-card h3 {
+  margin-top: 24px;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 32px;
+  color: var(--blue);
+  text-align: center;
+}
+
+#feature-section .content .feature-card p {
+  margin-top: 16px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  color: #848fac;
+  text-align: center;
+}
+
+#feature-section .content .button {
+  width: fit-content !important;
+  margin: 0 auto;
+}
