--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ body {
   background-color: #f552791f;
   width: fit-content;
   border-radius: 22px;
+  text-transform: uppercase;
 }
 
 /* navbar */
@@ -81,7 +82,7 @@ nav {
   position: fixed;
   width: 100%;
   background-color: var(--dark);
-  z-index: 2;
+  z-index: 4;
 }
 
 nav .content {
@@ -329,6 +330,7 @@ nav .search-wrapper .button-search {
   margin-top: 8px;
 }
 
+/* feature section */
 #feature-section {
   background-color: var(--neutral);
 }
@@ -404,4 +406,239 @@ nav .search-wrapper .button-search {
 #feature-section .content .button {
   width: fit-content !important;
   margin: 0 auto;
+}
+
+/* top song section */
+#top-song-section {
+  background-color: #f9f9f9;
+}
+
+#top-song-section .content {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 100px 80px 84px 80px;
+}
+
+#top-song-section .content .label {
+  margin: 0 auto;
+}
+
+#top-song-section .content .title {
+  text-align: center;
+  margin-top: 16px;
+  margin-bottom: 43px;
+  font-size: 48px;
+  line-height: 56px;
+  letter-spacing: -2%;
+  font-weight: 700;
+  color: var(--blue);
+}
+
+#top-song-section .top-song-list-wrapper {
+  display: grid;
+  grid-template-columns: 386px 1fr;
+  gap: 40px;
+  overflow: hidden;
+}
+
+#top-song-section .top-song-list-wrapper .small-song-card-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+  max-height: 532px;
+}
+
+#top-song-section .top-song-list-wrapper .song-card {
+  overflow: hidden;
+  position: relative;
+  background-color: #f55279;
+  border-radius: 24px;
+  max-height: 532px;
+}
+
+#top-song-section .song-card .song-cover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#top-song-section .song-card .blur-box {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(18px);
+}
+
+#top-song-section .song-card .blur-box .song-title {
+  font-size: 24px;
+  font-weight: 700;
+  color: var(--blue);
+  line-height: 16px;
+  margin-bottom: 12px;
+}
+
+#top-song-section .song-card .blur-box .artist {
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--blue);
+  line-height: 16px;
+}
+
+#top-song-section .song-card .blur-box button {
+  width: 48px;
+  height: 48px;
+  border-radius: 100%;
+  border: none;
+  background-color: var(--primary);
+}
+
+/* company list section */
+#company-list-section {
+  background-color: #f9f9f9;
+}
+
+#company-list-section .content {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0px 100px 64px 100px;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* cta form section */
+#cta-form-section {
+  background-color: #f9f9f9;
+  position: relative;
+}
+
+#cta-form-section .dark-section {
+  height: 50%;
+  width: 100%;
+  background-color: var(--dark);
+  position: absolute;
+  z-index: 0;
+  bottom: 0;
+}
+
+#cta-form-section .content {
+  margin: 0 auto;
+  max-width: 1440px;
+  padding: 64px 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#cta-form-section .content .cta-wrapper {
+  background-color: var(--primary);
+  backdrop-filter: blur(125px);
+  width: 100%;
+  display: flex;
+  padding: 94px 0;
+  flex-direction: column;
+  gap: 64px;
+  border-radius: 24px;
+  z-index: 2;
+}
+
+#cta-form-section .content h2 {
+  font-size: 48px;
+  line-height: 56px;
+  letter-spacing: -0.96px;
+  color: var(--neutral);
+  text-align: center;
+}
+
+#cta-form-section .cta-input {
+  padding: 8px 8px 8px 40px;
+  background-color: var(--neutral);
+  border-radius: 36px;
+  height: 72px;
+  width: 100%;
+  max-width: 516px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+#cta-form-section .cta-input input {
+  border: none;
+  outline: none;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+/* footer */
+footer {
+  background-color: var(--dark);
+}
+
+footer .content {
+  max-width: 1440px;
+  padding: 64px 80px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+footer .content .tagline-wrapper h3 {
+  font-size: 40px;
+  line-height: 48px;
+  color: var(--neutral);
+  max-width: 481px;
+  margin-top: 32px;
+  margin-bottom: 44px;
+}
+
+footer .copyright-wrapper {
+  max-width: 1440px;
+  padding: 36px 80px;
+  margin: 0 auto;
+}
+
+footer .copyright-wrapper hr {
+  border-color: #ffffff3d;
+}
+
+footer .copyright {
+  display: flex;
+  padding-top: 24px;
+}
+
+footer .copyright p {
+  color: #ffffffcc;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 28px;
+}
+
+footer .content .footer-navigation {
+  display: flex;
+  justify-content: flex-end;
+  gap: 100px;
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--neutral);
+}
+
+footer .content .footer-navigation ul {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  list-style-type: none;
+}
+
+footer .content .footer-navigation ul li {
+  opacity: 72%;
+}
+
+footer .content .footer-navigation ul li:first-child {
+  opacity: 1 !important;
 }
